--- a/style.css
+++ b/style.css
@@ -315,6 +315,18 @@ header .checkbox {
     font-size: 1.5rem;
     color: #999;
 }
+.contact .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+.contact .row form {
+    flex: 1 1 30rem;
+    padding: 2rem 2.5rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+    border: .1rem solid rgba(0, 0, 0, .1);
+}
+
 
 
 
